force-app/main/default/objects/Augmented_Reality__c/Augmented_Reality__c.object-meta.xml
<CustomObject>
    <description>This object is the place to store Augmented Reality templates</description>
    <label>Augmented Reality</label>
    <nameField>
        <label>AR Container:</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Augmented Reality</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>