force-app/main/default/objects/Augmented_Reality__c/fields/Design_Brief__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Brief (SR-001 Rev 6)</label>
    <referenceTo>Design_Brief__c</referenceTo>
    <relationshipLabel>Augmented Reality</relationshipLabel>
    <relationshipName>Augmented_Reality</relationshipName>
    <type>Lookup</type>
</CustomField>