force-app/main/default/objects/Augmented_Reality__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Augmented Reality</relationshipLabel>
    <relationshipName>Augmented_Reality</relationshipName>
    <type>Lookup</type>
</CustomField>